erDiagram
    SHIPPING_AREAS ||--o{ MERCHANT_SHIPPING_ORIGINS : area_id
    SHIPPING_AREAS ||--o{ CUSTOMER_ADDRESSES : area_id
    SHIPPING_AREAS ||--o| CHECKOUT_SHIPPING_ADDRESSES : area_id

    CATEGORIES ||--o{ PRODUCTS : category_id
    PRODUCTS ||--o{ PRODUCT_MEDIA : product_id
    PRODUCTS ||--o{ PRODUCT_VARIANTS : product_id
    PRODUCTS ||--o{ PRODUCT_COLLECTIONS : product_id
    COLLECTIONS ||--o{ PRODUCT_COLLECTIONS : collection_id

    CUSTOMERS ||--o{ CUSTOMER_REFRESH_TOKENS : customer_id
    CUSTOMERS ||--o{ CUSTOMER_ADDRESSES : customer_id
    CUSTOMERS ||--o{ CARTS : customer_id
    CUSTOMERS ||--o{ CHECKOUTS : customer_id
    CUSTOMERS ||--o{ ORDERS : customer_id

    CARTS ||--o{ CART_ITEMS : cart_id
    CARTS ||--|| CHECKOUTS : cart_id

    CHECKOUTS ||--o{ CHECKOUT_ITEMS : checkout_id
    CHECKOUTS ||--|| CHECKOUT_SHIPPING_ADDRESSES : checkout_id
    CHECKOUTS ||--o{ CHECKOUT_SHIPPING_QUOTES : checkout_id
    CHECKOUTS ||--|| ORDERS : checkout_id

    ORDERS ||--o{ ORDER_ITEMS : order_id
    ORDERS ||--|| ORDER_SHIPPING_ADDRESSES : order_id
    ORDERS ||--o| ORDER_SHIPPING_SELECTIONS : order_id
    ORDERS ||--o{ PAYMENTS : order_id
    ORDERS ||--o| SHIPMENTS : order_id
    ORDERS ||--o{ INVENTORY_RESERVATIONS : order_id
    ORDERS ||--o{ PAYMENT_STATUS_HISTORIES : order_id
    ORDERS ||--o{ SHIPMENT_STATUS_HISTORIES : order_id

    PRODUCT_VARIANTS ||--o{ INVENTORY_ADJUSTMENTS : variant_id
    PRODUCT_VARIANTS ||--o{ INVENTORY_RESERVATIONS : variant_id
    PRODUCT_VARIANTS ||--o{ CART_ITEMS : variant_id
    PRODUCT_VARIANTS ||--o{ CHECKOUT_ITEMS : variant_id
    PRODUCT_VARIANTS ||--o{ ORDER_ITEMS : variant_id

    ORDER_ITEMS ||--|| INVENTORY_RESERVATIONS : order_item_id
    PAYMENTS ||--o{ PAYMENT_STATUS_HISTORIES : payment_id
    SHIPMENTS ||--o{ SHIPMENT_STATUS_HISTORIES : shipment_id
